--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Personal portfolio for Thor Ivar Nirisen Johansen" />
     <link rel="icon" href="%sveltekit.assets%/blob.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
